# vicedebug

./: .gitignore  CMakeLists.txt  IDENTIFICATION.md  README.md  TODO.md
resources/: resources.qrc
resources/images/other_icons/: SOURCES
src/: breakpoints.h  config.h.in  connectionworker.cpp  connectionworker.h  controller.cpp  controller.h  disassembler.cpp  disassembler.h  disassembler_6502.cpp  disassembler_6502.h  disassembler_z80.cpp  disassembler_z80.h  focuswatcher.cpp  focuswatcher.h  fonts.cpp  fonts.h  machinestate.cpp  machinestate.h  main.cpp  mainwindow.cpp  mainwindow.h  petscii.h  resources.cpp  resources.h  symtab.cpp  symtab.h  tooltipgenerators.cpp  tooltipgenerators.h  vectorutils.cpp  vectorutils.h  viceclient.cpp  viceclient.h  watches.cpp  watches.h
src/dialogs/: aboutdialog.cpp  aboutdialog.h  addbreakpointdialog.cpp  addbreakpointdialog.h  breakpointdialog.cpp  breakpointdialog.h  symboldialog.cpp  symboldialog.h  watchdialog.cpp  watchdialog.h
src/widgets/: breakpointswidget.cpp  breakpointswidget.h  disassemblywidget.cpp  disassemblywidget.h  memorywidget.cpp  memorywidget.h  registerswidget.cpp  registerswidget.h  symbolswidget.cpp  symbolswidget.h  watcheswidget.cpp  watcheswidget.h
test/: disassembler_6502_test.cpp  disassembler_test.cpp  disassembler_z80_test.cpp  watches_test.cpp
tools/: .gitignore  z80-opcodes  z80conv.go
